--- a/app/assets/styles/modules/_doc.css
+++ b/app/assets/styles/modules/_doc.css
@@ -15,7 +15,8 @@
    }
 
    &__text {
-      margin-top: 32px;
+      width: calc(100% - 16px);
+      margin: 32px auto 0;
       color: #707070;
       line-height: 23px;
       letter-spacing: -0.28px;
@@ -32,8 +33,8 @@
       top: 45%;
 
       & > a {
-         width: 16px;
-         height: 37px;
+         width: 21px;
+         height: 50px;
          position: fixed;
          background-size: cover;
       }
