--- a/app/assets/styles/modules/_post-list.css
+++ b/app/assets/styles/modules/_post-list.css
@@ -57,6 +57,7 @@
          display: block;
          width: 72px;
          height: 60px;
+         border: 1px solid #ccc;
          position: absolute;
          top: 12px;
          right: 0;
