--- a/app/assets/styles/modules/_post-thumb.css
+++ b/app/assets/styles/modules/_post-thumb.css
@@ -29,7 +29,7 @@
       background-repeat: no-repeat;
       background-position: center center;
       background-size: cover;
-
+      border: 1px solid #ccc;
    }
 
    h2 {
