--- a/app/assets/styles/modules/_series-post.css
+++ b/app/assets/styles/modules/_series-post.css
@@ -28,6 +28,7 @@
       background-repeat: no-repeat !important;
       background-position: center !important;
       background-size: cover !important;
+      border: 1px solid #ccc;
 
       @mixin atSmall {
          height: 0;
