--- a/app/assets/styles/base/_variables.css
+++ b/app/assets/styles/base/_variables.css
@@ -1,6 +1,8 @@
-$boxBlue: #43adff;
-$menuBlue: #73c2ff;
-$fontBlue: #2da3ff;
+$boxBlue: #6244B7;
+$menuBlue: #442a8d;
+$fontBlue: #6244B7;
+$medium: #aba0f1;
+$light: #DDDCF6;
 $textGray: #707070;
 $textSmallGray: #a7a7a7;
 $lineGray: #ccc;
