--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -46,7 +46,7 @@
 @import "modules/_doc-pdf";
 @import "modules/_doc-footer";
 @import "modules/_doc-footer-modal";
-@import "modules/_ccl-social";
+@import "modules/_ccl-btns";
 
 
 /* BEM Blocks for p05 */
