--- a/app/assets/styles/modules/_ccl-btns.css
+++ b/app/assets/styles/modules/_ccl-btns.css
@@ -1,8 +1,9 @@
-.ccl-social {
+.ccl-btns {
    margin-top: 30px;
 
-   .ccl {
+   &__ccl {
       float: left;
+      
       &-image {
          width: 62px;
          height: 22px;
@@ -13,17 +14,22 @@
 
    }
 
-   .urlcopy {
+   &__btns {
+      float: right;
+   }
+
+   .btn-url {
       width: 77px;
       height: 22px;
       border: solid 1px #a7a7a7;
       border-radius: 11px;
-      float: right;
+      float: left;
       text-align: center;
       color: #a7a7a7;
       font-size: 10px;
       font-weight: 500;
       line-height: 20px;
+      margin-right: 14px;
    }
 
    .icon-copy {
@@ -38,4 +44,9 @@
       background-position: center;
    }
  
+   .btn-list {
+      position: relative;
+      float: left;
+      top: -5px;
+   }
 }
