--- a/app/assets/styles/modules/_existing-docs.css
+++ b/app/assets/styles/modules/_existing-docs.css
@@ -14,12 +14,12 @@
 
       &__title {
          font-size: 11px;
-         font-weight: bold;
+         font-weight: 700;
          line-height: 18px;
          margin-top: 6px;
       }
 
-      .num {
+      .counter {
          font-family: Roboto;
          font-size: 22px;
          font-weight: 900;
