--- a/app/assets/styles/modules/_line.css
+++ b/app/assets/styles/modules/_line.css
@@ -4,11 +4,11 @@
       width: 56px;
       position: relative;
       left: 0;
-      border-top: 4px solid $boxBlue;
+      border-top: 4px solid $medium;
    }
 
    &--black {
-      border-top: 4px solid #000;
+      border-top: 2px solid #000;
       margin: 0;
    }
 }
