--- a/app/assets/styles/modules/_select-box-wrapper.css
+++ b/app/assets/styles/modules/_select-box-wrapper.css
@@ -99,7 +99,7 @@
    
 
       &.active {
-         background-color: #55aaec;
+         background-color: $boxBlue;
 
          &:after{
             content: "\e91a";
