--- a/app/assets/styles/modules/_terms.css
+++ b/app/assets/styles/modules/_terms.css
@@ -20,6 +20,9 @@
       &.icon-door {
          background-image: url(../images/icons/icon-door-gray.svg);
       }
+      &.icon-box {
+         background-image: url(../images/icons/icon-boxes-gray.svg);
+      }
    }
 
    &__nav {
@@ -33,13 +36,14 @@
          font-size: 14px;
          font-weight: bold;
          color: #a7a7a7;
-         padding: 0 17px;
+         padding: 0 8px 0 9px;
          border-left: 1px solid #ccc;
          position: relative;
       }
 
       li:first-child {
          border-left: none;
+         padding-right: 17px;
       }
 
       .type-of-term.active {
@@ -55,6 +59,9 @@
             }
             &.icon-door {
                background-image: url(../images/icons/icon-door-blue.svg);
+            }
+            &.icon-box {
+               background-image: url(../images/icons/icon-boxes-blue.svg);
             }
          }
       }
