--- a/app/assets/styles/modules/_text.css
+++ b/app/assets/styles/modules/_text.css
@@ -2,6 +2,7 @@
    &--large {
       font-size: 20px;
       line-height: 26px;
+      line-height: 1.44;
    }
 
    &--medium {
@@ -32,7 +33,7 @@
 }
 
 .li-title-dot {
-   font-size: 11px;
+   font-size: 12px;
    font-weight: 500;
    letter-spacing: -0.06px;
    color: #a7a7a7;
@@ -52,7 +53,7 @@
       color: $boxBlue;
 
       &::before {
-         background-color: $boxBlue;
+         background-color: $medium;
       }
    }
 }
