--- a/app/assets/styles/modules/_doc-slider.css
+++ b/app/assets/styles/modules/_doc-slider.css
@@ -1,17 +1,15 @@
 .doc__slider {
-   margin-top: 10px;
+   margin-top: 30px;
 
-   &__slide {
-      width: 100%;
-      padding: 92px 0;
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center center;
+   &__slide img {
+    border: 1px solid #e3e3e3;
+    height: 220px;
+    margin: 0 auto;
 
-      @mixin atSmall {
-        padding: 200px 0;
-      }
-   }
+    @mixin atSmall {
+      height: 400px;
+    }
+  }
 
    .slick-dots {
       z-index: 10;
