Hero-slider image position changed.

--- a/app/assets/styles/modules/_hero-slider.css
+++ b/app/assets/styles/modules/_hero-slider.css
@@ -17,6 +17,7 @@
    &__slide {
       background-size: cover;
       background-repeat: no-repeat;
+      background-position: center center;
    }
 
    .slick-dots {
